--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-PORT=
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PASS=
-REQUEST_URI=
+PORT=3333
+
+MONGO_URI=mongodb+srv://atevsistemas:Atev123@cluster0.fe2ws.gcp.mongodb.net/teste?retryWrites=true&w=majority
+DB_HOST=cluster0.fe2ws.gcp.mongodb.net
+DB_NAME=backpronto
+DB_USER=atevsistemas
+DB_PASS=Atev123
+
+REQUEST_URI=*
 PORT_STRICT=
-TOKEN_KEY=
+
+TOKEN_KEY=teste123
+
+NODE_ENV=development
